<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Activity.ConfirmationActivity">

    <TextView
        android:id="@+id/title_unit1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:text="Unit1"/>

    <TextView
        android:id="@+id/desc_unit1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="10 models in rows of 5&#13;&#10;Chosen weapons:&#13;&#10;General, BSB"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <CheckBox
                android:id="@+id/checkbox_unit1_charge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"/>

            <TextView
                android:id="@+id/desc_unit1_charge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/charging" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <CheckBox
                android:id="@+id/checkbox_unit1_shoot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"/>

            <TextView
                android:id="@+id/desc_unit1_shoot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stand_and_shoot" />
        </LinearLayout>
    </LinearLayout>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/title_unit2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:text="Unit2"/>

    <TextView
        android:id="@+id/desc_unit2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="10 models in rows of 5&#13;&#10;Chosen weapons:&#13;&#10;General, BSB"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <CheckBox
                android:id="@+id/checkbox_unit2_charge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"/>

            <TextView
                android:id="@+id/desc_unit2_charge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/charging" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <CheckBox
                android:id="@+id/checkbox_unit2_shoot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"/>

            <TextView
                android:id="@+id/desc_unit2_shoot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stand_and_shoot" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/title_combat_phases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/combat_phases"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_rounds_decrease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/minus" />

        <TextView
            android:id="@+id/rounds_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:text="12" />

        <Button
            android:id="@+id/button_rounds_increase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/plus" />
    </LinearLayout>

    <Button
        android:id="@+id/button_run_simulator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Let them fight"
        android:layout_margin="16sp"/>

    <Button
        android:id="@+id/button_redo_units_confirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Change the units"
        android:layout_margin="16sp"/>


</LinearLayout>